[package]
name = "mjolnir"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
cucumber_rust = "0.6"
dotenv = "0.15"
gherkin_rust = "0.8"
tokio = { version = "0.2.13", features = [ "full" ] }
futures = { version = "0.3" }
juniper = { git="https://github.com/graphql-rust/juniper.git", features = ["chrono", "uuid"] }
juniper_warp = { git="https://github.com/graphql-rust/juniper.git", features = ["subscriptions"] }
juniper_subscriptions = { git="https://github.com/graphql-rust/juniper.git" }
md-5 = "0.8"
pretty_env_logger = "0.4"
reqwest = "0.10.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.8"
slog = "2.5"
slog-term = "2.5"
slog-async = "2.5"
snafu = { version = "0.6", features = [ "futures" ] }
sqlx = { version = "0.3.4", default-features = false, features = [ "postgres", "runtime-tokio", "macros", "uuid", "chrono", "bigdecimal" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
warp = { version = "0.2.2" }
yaml-rust = "0.4"

[lib]
name = "mjolnir"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[test]]
name = "cucumber"
path = "tests/cucumber.rs"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber_rust = "0.6"
gherkin_rust = "0.8"
